--- a/2-3.html
+++ b/2-3.html
@@ -39,8 +39,11 @@ The enumeration in the Constitution, of certain rights, shall not be construed t
 <p><li><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Amendment 10</strong></li>
 The powers not delegated to the United States by the Constitution, nor prohibited by it to the States, are reserved to the States respectively, or to the people.</p>
 </ul>
-
-
 </div>
+
+<div></div>
+<a href="1-2.html">&laquo;previous</a>
+<a href="3-5.html">next&raquo;</a>
+
 </body>
 </html>
