--- a/4-3.html
+++ b/4-3.html
@@ -1,7 +1,8 @@
 <html>
 
 <head>
-  <title>3-5</title>
+  <title>4-3</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
 
 <style>
 
@@ -12,18 +13,21 @@
 	float: left;
 	margin: 25px;
 	border: 3px solid #89C35C;
+	border-style: dotted;
+	font-family: 'Open Sans Condensed', sans-serif;
+
 }
 
 h2 {
 	background-color: #F08080;
 	width: 200px;
-	height: 25px;
+	height: 27px;
 }
 
 h3 {
 	background-color: #F08080;
 	width: 300px;
-	height: 40px;
+	height: 47px;
 
 }
 
@@ -75,10 +79,6 @@ h3 {
 <div class="box">
 <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Amendment 10</h2>
 <p>The powers not delegated to the United States by the Constitution, nor prohibited by it to the States, are reserved to the States respectively, or to the people.</p></div>
-
-<div></div>
-<a href="2-3.html">&laquo;previous</a>
-<a href="4-2.html">next&raquo;</a>
 
 </body>
 
