--- a/example.html
+++ b/example.html
@@ -1,6 +1,15 @@
 <html>
 <head>
+<link href="https://fonts.googleapis.com/css?family=Sansita" rel="stylesheet">
   <title>Hello</title>
+<style>
+	.typeface {
+		font-family: 'Sansita', sans-serif;
+	}
+</style>
+
+
+
 </head>
 <body>
   <p>This is my cool <br> content.</p>
@@ -8,7 +17,9 @@
   <p>This is my cool content.
   This is my cool content.
   This is my cool content.
-  This is my cool content.</p>Amendments to the Constitution of the United States of America
+  This is my cool content.</p>
+
+<p class="typeface">Amendments to the Constitution of the United States of America
 Articles in addition to, and amendment of, the Constitution of the United States of America, proposed by Congress, and ratified by the several states, pursuant to the Fifth Article of the original Constitution fn1
 Amendment 1
 Congress shall make no law respecting an establishment of religion, or prohibiting the free exercise thereof; or abridging the freedom of speech, or of the press; or the right of the people peaceably to assemble, and to petition the Government for a redress of grievances.
@@ -30,5 +41,6 @@ Amendment 9
 The enumeration in the Constitution, of certain rights, shall not be construed to deny or disparage others retained by the people.
 Amendment 10
 The powers not delegated to the United States by the Constitution, nor prohibited by it to the States, are reserved to the States respectively, or to the people.
+</p>
 </body>
 </html>
