--- a/4-1.html
+++ b/4-1.html
@@ -1,30 +1,41 @@
 <html>
 
 <head>
-  <title>3-5</title>
+  <title>4-1</title>
 
 <style>
 
 .box {
-	background-color: #FDEEF4;
 	width: 300px;
 	height: 330px;
 	float: left;
 	margin: 25px;
-	border: 3px solid #89C35C;
+	position: relative;
+	
 }
 
 h2 {
-	background-color: #F08080;
 	width: 200px;
 	height: 25px;
 }
 
 h3 {
-	background-color: #F08080;
 	width: 300px;
 	height: 40px;
+}
 
+.box0 {
+    float: left;
+    margin-top: 150px;
+    width: 300px;
+    height: 1360px;
+}
+
+.boxfixed {
+    position: fixed;
+    width: 209px;
+    margin-top: 50px;
+    margin-left: 50px;
 }
 
 </style>
@@ -32,9 +43,9 @@ h3 {
 
 <body>
 
-<div class="box">
-<h3>Amendments to the Constitution of the United States of America</h3>
-<p>Articles in addition to, and amendment of, the Constitution of the United States of America, proposed by Congress, and ratified by the several states, pursuant to the Fifth Article of the original Constitution fn1</p></div>
+<div class="box0"><div class="boxfixed">
+Amendments to the Constitution of the United States of America
+Articles in addition to, and amendment of, the Constitution of the United States of America, proposed by Congress, and ratified by the several states, pursuant to the Fifth Article of the original Constitution fn1</div></div>
 
 <div class="box">
 <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Amendment 1</h2>
@@ -75,10 +86,6 @@ h3 {
 <div class="box">
 <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Amendment 10</h2>
 <p>The powers not delegated to the United States by the Constitution, nor prohibited by it to the States, are reserved to the States respectively, or to the people.</p></div>
-
-<div></div>
-<a href="2-3.html">&laquo;previous</a>
-<a href="4-2.html">next&raquo;</a>
 
 </body>
 
